--- a/resources/js/lang/fr.json
+++ b/resources/js/lang/fr.json
@@ -14,6 +14,7 @@
     "interventions": "Interventions",
     "all_help_requests": "Toutes les demandes d'aide",
     "request_help": "Demander de l'aide",
+    "actions_history": "Historique des actions",
     "settings": "Paramètres",
     "logout": "Se déconnecter",
     "user_management": "Gestion des utilisateurs",
