--- a/resources/js/lang/fr.json
+++ b/resources/js/lang/fr.json
@@ -7,9 +7,9 @@
     "products": "Produits",
     "all_products": "Tous les produits",
     "add_product": "Ajouter un produit",
-    "movements": "Mouvements",
-    "all_movements": "Tous les mouvements",
-    "add_movement": "Ajouter un mouvement",
+    "movements": "Transactions",
+    "all_movements": "Tous les Transactions",
+    "add_movement": "Ajouter une Transactions",
     "actions": "Actions",
     "interventions": "Interventions",
     "all_help_requests": "Toutes les demandes d'aide",
@@ -90,21 +90,21 @@
     "edit_product": "Modifier le produit",
     "product_updated_successfully": "Produit mis à jour avec succès!",
     "update_product": "Mettre à jour le produit",
-    "stock_movements": "Mouvements de stock",
+    "stock_movements": "Transactions de stock",
     "search_by_product_name": "Rechercher par nom de produit...",
-    "no_movements_found": "Aucun mouvement trouvé. Essayez de modifier votre recherche ou vos filtres.",
+    "no_movements_found": "Aucune Transactions trouvé. Essayez de modifier votre recherche ou vos filtres.",
     "movement_date": "Date",
     "from_service": "Du service",
     "to_service": "Vers le service",
-    "movement_paper": "Papier de mouvement",
+    "movement_paper": "Papier de Transactions",
     "service_required": "Service requis",
     "missing_assignment": "Affectation manquante",
     "need_assignment": "Vous devez être affecté à un service pour créer des mouvements.",
     "product_not_found": "Produit non trouvé",
-    "create_new_movement": "Créer un nouveau mouvement",
+    "create_new_movement": "Créer une nouvelle Transactions",
     "move_products_between_services": "Déplacer des produits entre services",
-    "back_to_movements": "Retour aux mouvements",
-    "movement_created_successfully": "Mouvement créé avec succès!",
+    "back_to_movements": "Retour aux Transactions",
+    "movement_created_successfully": "Transactions créé avec succès!",
     "select_a_product": "Sélectionnez un produit",
     "available": "Disponible",
     "destination_service": "Service de destination",
@@ -113,7 +113,7 @@
     "add_note_optional": "Ajoutez une note (optionnel)",
     "export_pdf": "Exporter PDF",
     "processing": "Traitement en cours...",
-    "create_movement": "Créer le mouvement",
+    "create_movement": "Créer la Transactions",
     "to": "à",
     "note": "Note",
     "no_note": "Pas de note",
@@ -143,7 +143,7 @@
     "action_history": "Historique des actions",
     "timeline_of_actions": "Chronologie des actions effectuées sur ce produit",
     "no_action_history": "Aucun historique d'action disponible pour ce produit",
-    "recent_movements": "Mouvements récents",
+    "recent_movements": "récents Transactions",
     "top_products": "Top Produits",
     "top5_products": "Top 5 Produits"
 }
